# dev

file_utils/crypto/: README.md  decrypt_directory.py  decrypt_file.py  encrypt_directory.py  encrypt_file.py  utils.py
file_utils/diff/: compare_manifests.py  create_manifest.py  directory_diff.py  manifesto.py  verify_disk_contents.py
file_utils/images/: README.md  sort_by_year.py  utils.py  verify_year.py
gpt/: .gitignore  README.md  activate_env.sh  data.py  generate.py  pytest.ini  requirements.txt  tokenizer.py  train.py
gpt/gpt/: __init__.py  attention.py  config.py  embeddings.py  layer_norm.py  linear.py  mlp.py  model.py  tokenizer.py  transformer_block.py
gpt/tests/: __init__.py  conftest.py  test_attention.py  test_config.py  test_data.py  test_embeddings.py  test_layer_norm.py  test_linear.py  test_mlp.py  test_model.py  test_tokenizer.py  test_transformer_block.py
graphics/2d/: default_scene.js  index.html
graphics/2d/css/: index.css
graphics/2d/js/: animator.js  index.js  matrix2d.js  scene.js  utils.js  (+3 more)
graphics/3d/: index.html  my_scene.js
homebrew-thermal-modeling/: README.md
homebrew-thermal-modeling/js/: chiller.js  fermenter.js
homebrewing/homebrew-thermal-modeling/: index.html
homebrewing/temperature-controller-firmware/: Cloud.h  Common.h  Config.cpp  README.md  RotaryEncoder.cpp  RotaryEncoder.h  State.cpp  State.h  ThermalProbe.cpp  UI.cpp
homebrewing/temperature-controller-webpage/: README.md  index.html
karpathy_0_to_hero/: karpathy-01-micrograd.ipynb  karpathy-02-makemore.ipynb  karpathy-03-makemore-MLP.ipynb
temperature-controller-firmware/: Cloud.cpp  Common.h  Config.cpp  Config.h  Controller.cpp  Controller.h  Hardware.cpp  Hardware.h  LICENSE  State.h  ThermalProbe.cpp  ThermalProbe.h  UI.cpp  UI.h  pid-controller.ino  project.properties
temperature-controller-webpage/: .htaccess  LICENSE  index.html  stats.html
temperature-controller-webpage/css/: index.css
temperature-controller-webpage/js/: api.js  index.js  stats.js
timing_examples/: README  correction.cpp  jitter.cpp
xsdk/: CMakeLists.txt  README
xsdk/doc/: Doxyfile
xsdk/include/xsdk/: buffer.h  common.h  condition.h  exception.h  guard.h  mutex.h  thread.h  timeutils.h
xsdk/include/xsdk/time/: fast_clock.h
xsdk/source/: buffer.cpp  exception.cpp  fast_clock.cpp  guard.cpp
xsdk/source/posix/: condition.cpp  mutex.cpp  thread.cpp
xsdk/source/windows/: condition.cpp  mutex.cpp  thread.cpp  timeutils.cpp
xsdk/test/shared/: BaseTest.cpp  BaseTest.h
xsdk/test/test_xsdk/: CMakeLists.txt
xsdk/test/test_xsdk/include/: TestBuffer.h  TestCondition.h  TestException.h  TestGuard.h  TestMutex.h  TestThread.h
xsdk/test/test_xsdk/source/: TestBuffer.cpp  TestCondition.cpp  TestException.cpp  TestGuard.cpp  TestMutex.cpp  TestThread.cpp  main.cpp
xsdk/test/test_xsdk_time/: CMakeLists.txt
xsdk/test/test_xsdk_time/include/: TestFastClock.h
xsdk/test/test_xsdk_time/source/: TestFastClock.cpp  main.cpp
(+25 files in other folders)
